# herdr-deck

./: .gitignore  Cargo.toml  LICENSE  README.md  herdr-plugin.toml
.config/: wt.toml
scripts/: open-deck.sh
src/: app.rs  ext.rs  main.rs  preview.rs  sessions.rs  ui.rs
